--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-<h2>Hello!!!</h2>
+<h2>Hello! This is a welcome home page to Spring boot + Data JPA + Thymeleaf APP!!!</h2>
+<a href="/tasks"> Click here to see the 'Tasks'</a>
 
 </body>
 </html>
